--- a/indext.html
+++ b/indext.html
@@ -17,6 +17,18 @@
     <h1 id="title">Puppy Bowl</h1>
     <!-- form to add new players -->
     <div id="new-player-form">
+      <h2> New Puppy Form </h2>
+      <form id="playerForm">
+        <label for="dogName">Dog Name</label><br>
+        <input type="text" id="dogName" name="dogName"><br>
+
+        <label for="breed">Breed</label><br>
+        <input type="text" id="breed" name="breed"><br>
+
+        <label for='submit'></label>
+        <input type="submit" id="submit">
+
+      </form>
 
     </div>
 
